[gd_scene load_steps=28 format=2]

[ext_resource path="res://img/bossSkull.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemies/finalBoss.gd" type="Script" id=2]
[ext_resource path="res://fonts/liberation-fonts-ttf-2.00.1/LiberationMono-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://img/groundBreak.png" type="Texture" id=4]
[ext_resource path="res://img/bossMouth.png" type="Texture" id=5]
[ext_resource path="res://img/bossSkullShield.png" type="Texture" id=6]
[ext_resource path="res://img/bossMouthShield.png" type="Texture" id=7]
[ext_resource path="res://img/aura.png" type="Texture" id=8]
[ext_resource path="res://fonts/War is over/War is over.tres" type="DynamicFont" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 48.0

[sub_resource type="DynamicFont" id=2]
size = 24
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 102.5, 18 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 101.5, 18 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 5.79557
height = 19.9735

[sub_resource type="CapsuleShape2D" id=6]
radius = 45.0
height = 28.0

[sub_resource type="Animation" id=7]
resource_name = "chargedShoot"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("stateBody/bossMouth:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1.1, 3.014 ), Vector2( -1.1, 11.5 ), Vector2( -1.1, 3.014 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "fadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("stateBody/bossMouth:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.101, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.401, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1.1, 3 ), Vector2( -1.1, 5.076 ), Vector2( -1.1, 7 ), Vector2( -1.1, 7 ), Vector2( -1.1, 9 ), Vector2( -1.1, 11 ), Vector2( 0, 11 ), Vector2( 1, 12 ), Vector2( -1, 10 ), Vector2( 0, 9 ), Vector2( 0, 9 ), Vector2( -2, 10 ), Vector2( -1, 8 ), Vector2( 0, 9 ), Vector2( 2, 12 ), Vector2( -2, 8 ), Vector2( 1, 12 ), Vector2( -1, 10 ), Vector2( -2, 10 ), Vector2( 0, 9 ), Vector2( -2, 8 ), Vector2( -1, 10 ), Vector2( -1.1, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("stateBody:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.45639, 1.48045 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("blockBody/blockBodyHitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitbox/finalBossHitbox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("finalBossBody:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
resource_name = "fadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("stateBody/bossMouth:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.101, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.401, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 0.99 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1.1, 3 ), Vector2( -1.1, 5.076 ), Vector2( -1.1, 7 ), Vector2( -1.1, 7 ), Vector2( -1.1, 9 ), Vector2( -1.1, 11 ), Vector2( 0, 11 ), Vector2( 1, 12 ), Vector2( -1, 10 ), Vector2( 0, 9 ), Vector2( 0, 9 ), Vector2( -2, 10 ), Vector2( -1, 8 ), Vector2( 0, 9 ), Vector2( 2, 12 ), Vector2( -2, 8 ), Vector2( 1, 12 ), Vector2( -1, 10 ), Vector2( -2, 10 ), Vector2( 0, 9 ), Vector2( -2, 8 ), Vector2( -1, 10 ), Vector2( -2, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("stateBody:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.45639, 1.48045 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("blockBody/blockBodyHitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hitbox/finalBossHitbox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("finalBossBody:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("stateBody/bossMouth:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1.1, 9.18 ), Vector2( -1.1, 2.162 ), Vector2( -1.1, 5.436 ), Vector2( -1.1, 2.162 ), Vector2( -1.1, 9.18 ) ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 33, 724 )

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0.0135135, 0.774775, 1 )
colors = PoolColorArray( 0.134766, 0.104759, 0.104759, 1, 0.10498, 0.1017, 0.1017, 1, 0.0410156, 0.0410156, 0.0410156, 0 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
emission_shape = 1
emission_sphere_radius = 14.57
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.11
color_ramp = SubResource( 13 )

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0, 0.486486, 0.995495 )
colors = PoolColorArray( 1, 0.887695, 0, 1, 1, 0, 0, 1, 1, 0.729412, 0.729412, 0 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
emission_shape = 1
emission_sphere_radius = 41.63
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.96
scale_random = 1.0
color_ramp = SubResource( 16 )

[sub_resource type="CapsuleShape2D" id=18]
radius = 234.0
height = 0.0

[node name="finalBoss" type="KinematicBody2D" groups=[
"Enemies",
]]
position = Vector2( 1, -2 )
script = ExtResource( 2 )

[node name="finalBossBody" type="CollisionShape2D" parent="."]
position = Vector2( 1, -5 )
shape = SubResource( 1 )

[node name="stateBody" type="Sprite" parent="."]
self_modulate = Color( 0, 0.882353, 1, 1 )
position = Vector2( 2, -9 )
scale = Vector2( 1.45639, 1.48045 )

[node name="bossMouthShield" type="Sprite" parent="stateBody"]
self_modulate = Color( 0.388235, 0.541176, 0.937255, 1 )
position = Vector2( -1.02994, 3.03961 )
scale = Vector2( 0.552289, 0.526195 )
texture = ExtResource( 7 )

[node name="bossSkullShield" type="Sprite" parent="stateBody"]
self_modulate = Color( 0.388235, 0.541176, 0.937255, 1 )
position = Vector2( -1.02995, 9.11884 )
scale = Vector2( 0.532386, 0.533659 )
texture = ExtResource( 6 )

[node name="bossMouth" type="Sprite" parent="stateBody"]
position = Vector2( -1.1, 3 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="bossSkull" type="Sprite" parent="stateBody"]
position = Vector2( -1.10179, 8.52808 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="healthPoints" type="Label" parent="stateBody"]
margin_left = -15.1058
margin_top = -30.3962
margin_right = 16.8942
margin_bottom = -2.39616
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lowerDodge" type="Area2D" parent="."]
position = Vector2( 0, -2 )

[node name="lowerDodgeHitbox" type="CollisionShape2D" parent="lowerDodge"]
position = Vector2( 2.5, 70.25 )
shape = SubResource( 3 )

[node name="upperDodge" type="Area2D" parent="."]
position = Vector2( 0, -2 )

[node name="upperDodgeHitbox" type="CollisionShape2D" parent="upperDodge"]
position = Vector2( 0, -73 )
shape = SubResource( 4 )

[node name="blockBody" type="Area2D" parent="."]
position = Vector2( 0, -2 )

[node name="blockBodyHitbox" type="CollisionShape2D" parent="blockBody"]
scale = Vector2( 3.796, 3.675 )
shape = SubResource( 5 )

[node name="hitbox" type="Area2D" parent="."]
position = Vector2( 0, -1 )

[node name="finalBossHitbox" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 1, -4 )
shape = SubResource( 6 )

[node name="firingPoint" type="Position2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/chargedShoot = SubResource( 7 )
anims/fadeIn = SubResource( 8 )
anims/fadeOut = SubResource( 9 )
anims/talking = SubResource( 10 )

[node name="fadeOutTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="fadeInTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="shieldTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="attackTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="dialogDeath" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="active" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="bossDialogs" type="RichTextLabel" parent="."]
margin_left = -188.0
margin_top = 73.0
margin_right = 62.0
margin_bottom = 134.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/normal_font = ExtResource( 9 )
bbcode_enabled = true
tab_size = 6
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rift" type="RigidBody2D" parent="."]
position = Vector2( 0, -4 )
mode = 1

[node name="riftSprite" type="Sprite" parent="rift"]
visible = false
position = Vector2( 1, -7 )
scale = Vector2( 0.698763, 1.35 )
texture = ExtResource( 4 )

[node name="riftCollisionShape" type="CollisionShape2D" parent="rift"]
position = Vector2( 358, -5 )
scale = Vector2( 0.964278, 1 )
shape = SubResource( 11 )
disabled = true

[node name="smokeExplosion1" type="Particles2D" parent="rift/riftCollisionShape"]
position = Vector2( -3.05176e-05, -196 )
scale = Vector2( 1.72307, -1.78563 )
emitting = false
amount = 500
lifetime = 0.5
one_shot = true
process_material = SubResource( 14 )

[node name="smokeExplosion2" type="Particles2D" parent="rift/riftCollisionShape"]
position = Vector2( 1.03705, -35 )
scale = Vector2( 1.81798, 1.59271 )
emitting = false
amount = 500
lifetime = 0.5
one_shot = true
process_material = SubResource( 14 )

[node name="smokeExplosion3" type="Particles2D" parent="rift/riftCollisionShape"]
position = Vector2( 3.1111, 102 )
scale = Vector2( 1.72307, -1.78563 )
emitting = false
amount = 500
lifetime = 0.5
one_shot = true
process_material = SubResource( 14 )

[node name="smokeExplosion4" type="Particles2D" parent="rift/riftCollisionShape"]
position = Vector2( 4.14815, 252 )
scale = Vector2( 1.69518, 1.2589 )
emitting = false
amount = 500
lifetime = 0.5
one_shot = true
process_material = SubResource( 14 )

[node name="Explosion1" type="Particles2D" parent="rift/riftCollisionShape"]
position = Vector2( -0.185669, -252 )
scale = Vector2( 1.5, 1.5 )
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
process_material = SubResource( 17 )

[node name="Explosion2" type="Particles2D" parent="rift/riftCollisionShape"]
position = Vector2( 2.81436, 201 )
scale = Vector2( 1.22943, 2.25 )
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
process_material = SubResource( 17 )

[node name="Explosion3" type="Particles2D" parent="rift/riftCollisionShape"]
position = Vector2( 5.81433, -33 )
scale = Vector2( 1.10273, 9.13798 )
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
process_material = SubResource( 17 )

[node name="Explosion4" type="Particles2D" parent="rift/riftCollisionShape"]
position = Vector2( 6.81436, -25 )
scale = Vector2( 1.46851, 1.54157 )
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
process_material = SubResource( 17 )

[node name="protectiveAura" type="RigidBody2D" parent="."]
position = Vector2( 0, -2 )
mode = 1

[node name="Sprite" type="Sprite" parent="protectiveAura"]
position = Vector2( 14, 3 )
scale = Vector2( 0.42, 0.42 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="protectiveAura"]
visible = false
position = Vector2( 0, 5 )
shape = SubResource( 18 )

[connection signal="area_entered" from="lowerDodge" to="." method="_on_lowerDodge_area_entered"]
[connection signal="area_entered" from="upperDodge" to="." method="_on_upperDodge_area_entered"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="fadeOutTimer" to="." method="_on_fadeOutTimer_timeout"]
[connection signal="timeout" from="fadeInTimer" to="." method="_on_fadeInTimer_timeout"]
[connection signal="timeout" from="shieldTimer" to="." method="_on_shieldTimer_timeout"]
[connection signal="timeout" from="attackTimer" to="." method="_on_attackTimer_timeout"]
[connection signal="timeout" from="dialogDeath" to="." method="_on_dialogDeath_timeout"]
[connection signal="timeout" from="active" to="." method="_on_active_timeout"]
